[gd_scene load_steps=5 format=3 uid="uid://dvw7lt62s0yy3"]

[ext_resource type="Script" path="res://scripts/block.gd" id="1_5e2iq"]
[ext_resource type="Texture2D" uid="uid://edhnrio6dh84" path="res://assets/environment/barra5.png" id="1_a2nq4"]
[ext_resource type="AudioStream" uid="uid://c4n7ekv60j6bo" path="res://assets/audio/break.ogg" id="2_ipln0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ts4bx"]
size = Vector2(36, 20)

[node name="Block" type="StaticBody2D" groups=["gr_block"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_5e2iq")
metadata/_edit_group_ = true

[node name="BlockSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_a2nq4")

[node name="BlockCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ts4bx")

[node name="BreakAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ipln0")
